Review model + new review + delete review

--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -1,6 +1,7 @@
 <%= simple_form_for(@restaurant) do |f| %>
   <%= f.input :name %>
   <%= f.input :address %>
+  <%= f.input :chef_name %>
   <%= f.input :rating %>
   <%= f.submit %>
 <% end %>
