--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,6 +1,8 @@
 <h1>All restaurants</h1>
 <p><%= link_to "(Add +)", new_restaurant_path, style:"text-decoration: none;" %></p>
 
+<p><%= link_to "Top 5-starts ⭐️", top_restaurants_path, style:"text-decoration: none;" %></p>
+
 <ol>
   <% @restaurants.each do |restaurant| %>
     <li><%= link_to restaurant.name, restaurant_path(restaurant), style: "text-decoration: none;" %></li>
